<resources>
    <string name="app_name">APKEnclave</string>
    <string name="choose">Choose</string>
    <string name="choose_app">Choose App</string>
    <string name="installed_app">Installed App</string>
    <string name="empty_empty">Empty</string>
    <string name="filter">Filter</string>
    <string name="open_source_path">Open Source</string>
    <string name="fake_location">Fake Location</string>
    <string name="real_location">Real Location</string>
    <string name="set_location">Set Fake Location Successfully:%s-%s</string>
    <string name="close_fake_location">Disable FakeLocation</string>
    <string name="close_app_fake_location">Disable FakeLocation for %s</string>
    <string name="close_fake_location_success">Disable FakeLocation for %s Successfully</string>
    <string name="setting">Setting</string>
    <string name="hide_root">Hide Root</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="permission_setting">Setting</string>
    <string name="no_reminders">No Reminders</string>
    <string name="app_stop">Stop Running</string>
    <string name="app_stop_hint">Do you want to stop %s forcibly?</string>
    <string name="is_stop">%s is Stopped</string>
    <string name="app_clear">Clear Data</string>
    <string name="app_clear_hint">Clear Data for %s?</string>
    <string name="app_remove">Uninstall App</string>
    <string name="app_shortcut">Create Shortcut</string>
    <string name="shortcut_name">Shortcut Name</string>
    <string name="try_add_shortcut">Try Added To Desktop</string>
    <string name="add_shortcut_fail_msg">If the addition fails, please go to system settings and open the permission of "create desktop shortcut" for APKEnclave</string>
    <string name="install_success">Installed successfully</string>
    <string name="install_fail">Installation failed: %s</string>
    <string name="uninstall_success">Uninstalled successfully</string>
    <string name="uninstall_fail">Uninstallation failed</string>
    <string name="uninstall_app">Uninstall App</string>
    <string name="uninstall_app_hint">Uninstall %s, and relevant data will be cleared after uninstallation?</string>
    <string name="clear_success">Cleared successfully</string>
    <string name="start_fail">Could not launch the app</string>
    <string name="restart_module">Restart app to apply change</string>
    <string name="cannot_create_shortcut">This desktop does not support creating shortcuts</string>
    <string name="daemon_enable">Daemon</string>
    <string name="disable_flag_secure">Disable Flag Secure</string>
    <string name="disable_flag_secure_summary">Allow screenshots and screen recording in apps</string>
    <string name="gms_manager">GMS Manager</string>
    <string name="jump_gms">Go to Gms Manager</string>
    <string name="enable_gms">Enable Service</string>
    <string name="enable_gms_hint">Opening Google services can make youtube and other software that strongly rely on Google play services run normally.</string>
    <string name="disable_gms">Disable Service</string>
    <string name="disable_gms_hint">Clear the current Google service environment? Google service data will be cleared.</string>
    <string name="no_gms">Currently, there is no Google service environment on mobile phones.</string>
    <string name="appearance">Appearance</string>
    <string name="theme_mode">Theme</string>
    <string-array name="theme_mode_entries">
        <item>System default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="theme_mode_values" translatable="false">
        <item>system</item>
        <item>light</item>
        <item>dark</item>
    </string-array>
    <string name="grid_view">Grid view</string>
    <string name="list_view">List view</string>
    <string name="new_user">New user</string>
    <string name="default_user_name">User %s</string>
    <string name="rename_user">Rename</string>
    <string name="delete_user">Delete user</string>
    <string name="delete_user_hint">Delete %s? All apps and data in this space will be removed.</string>
    <string name="install_gms_option">Install Google services (GMS)</string>
    <string name="create_user_failed">Could not create user</string>
    <string name="duplicate_user">Duplicate</string>
    <string name="duplicate_user_title">Duplicate user</string>
    <string name="duplicate_user_default_name">%s (copy)</string>
    <string name="duplicate_copy_data">Copy app data</string>
    <string name="duplicate_copy_data_hint">All apps are installed in the copy. Checked apps also get their data (logins, settings, files). Google accounts are not copied.</string>
    <string name="duplicate_failed_apps">Could not copy: %s</string>
    <string name="user_name">Name</string>
    <string name="all_apps">Show all apps</string>
    <string name="more_apps_count" translatable="false">+%d</string>
    <plurals name="user_app_count">
        <item quantity="one">%d app</item>
        <item quantity="other">%d apps</item>
    </plurals>
    <string name="storage_permission_title">Storage Permission Required</string>
    <string name="storage_permission_message">This app needs \'All Files Access\' permission to properly run sandboxed apps. Without this permission, some apps may not work correctly.\n\nPlease grant permission in the next screen.</string>
    <string name="storage_permission_grant">Grant Permission</string>
    <string name="later">Later</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="init_failed">Failed to initialize app: %1$s</string>
    <string name="install_error">Installation failed: %s</string>
    <string name="uninstall_error">Uninstallation failed: %s</string>
    <string name="clear_error">Clear failed: %s</string>
    <string name="stop_error">Cannot stop %s</string>
    <string name="add_app">Add app</string>
    <string name="storage_settings_unavailable">Cannot open the settings screen. Grant all files access to the app manually in system settings.</string>
    <string name="sandbox_settings">Sandbox</string>
    <string name="hide_root_summary">Hide root from apps running inside the sandbox</string>
    <string name="daemon_enable_summary">Keep the sandbox background service running</string>
    <string name="google_services">Google services</string>
    <string name="installed_label">Installed</string>
    <string name="install_self_blocked">This is the app itself, it cannot be installed inside itself.</string>
    <string name="app_language">Language</string>
    <string-array name="app_language_entries">
        <item>System default</item>
        <item>English</item>
        <item>Polski</item>
        <item>简体中文</item>
        <item>繁體中文</item>
    </string-array>
    <string-array name="app_language_values" translatable="false">
        <item>system</item>
        <item>en</item>
        <item>pl</item>
        <item>zh-CN</item>
        <item>zh-TW</item>
    </string-array>
    <string name="shortcut_fake_location">Fake location</string>
    <string name="shortcut_removed">App removed</string>
    <string name="health_title">Permissions &amp; health</string>
    <string name="health_summary">Check what the sandbox needs to run reliably</string>
    <string name="remote_panel_title">PC web panel</string>
    <string name="remote_panel_summary">Manage spaces from a browser on your PC</string>
    <string name="remote_panel_running">Open on a PC in the same Wi-Fi: %1$s</string>
    <string name="remote_panel_notification">Web panel is running</string>
    <string name="remote_panel_no_network">Connect to Wi-Fi first, the web panel needs a local network</string>
    <string name="remote_panel_start_failed">Could not start the web panel</string>
    <string name="health_storage">All files access</string>
    <string name="health_battery">Battery optimisation</string>
    <string name="health_notifications">Notifications</string>
    <string name="health_shortcuts">Launcher shortcuts</string>
    <string name="health_engine">Device and engine</string>
    <string name="health_granted">Granted</string>
    <string name="health_not_granted">Not granted, some apps may not start</string>
    <string name="health_battery_ok">Unrestricted, the sandbox service can keep running</string>
    <string name="health_battery_limited">Optimised by the system, it may stop the background service</string>
    <string name="health_enabled">Enabled</string>
    <string name="health_disabled">Disabled, apps in the sandbox cannot notify you</string>
    <string name="health_supported">Supported</string>
    <string name="health_not_supported">Not supported by your launcher</string>
    <string name="health_engine_info">Android %1$s, %2$s, version %3$s</string>
    <string name="health_open_settings">Open settings</string>
    <string name="health_unavailable">Cannot open this settings screen</string>
    <string name="close_app">Close app</string>
    <string name="close_app_hint">Close the app to apply sandbox settings on the next start</string>
    <string name="stop_all_apps">Stop all apps</string>
    <string name="all_apps_stopped">All apps stopped</string>
    <string name="running_label">Running</string>
    <string name="export_space">Export to backup file</string>
    <string name="import_space">Import from backup file</string>
    <string name="backup_export_done">Backup saved</string>
    <string name="backup_export_failed">Could not save the backup</string>
    <string name="backup_import_failed">Could not restore the backup</string>
    <string name="app_info">App info</string>
    <string name="app_copy">Copy to another space</string>
    <string name="app_info_version">Version: %1$s (%2$d)</string>
    <string name="app_info_package">Package: %s</string>
    <string name="app_info_data">Data size: %s</string>
    <string name="app_copy_title">Copy %s to</string>
    <string name="app_copy_no_spaces">There is no other space to copy to</string>
    <string name="app_copy_data_question">Copy the data of the app (saves, logins) as well?</string>
    <string name="app_copy_with_data">With data</string>
    <string name="app_copy_without_data">Without data</string>
    <string name="app_copy_already_there">%1$s is already in %2$s</string>
    <string name="app_copied">%1$s copied to %2$s</string>
    <string name="app_copy_failed">Could not copy %s</string>
    <string name="about_title">About</string>
    <string name="about_summary">Version, credits and logs</string>
    <string name="about_message">%1$s %2$s\n\nAn independent fork of NewBlackbox by ALEX5402, released under the Apache License 2.0.</string>
    <string name="about_share_logs">Share logs</string>
    <string name="about_logs_failed">Could not collect the logs</string>
    <string name="about_logs_subject">APKEnclave logs</string>
    <string name="fake_coordinates">Coordinates</string>
    <string name="fake_favourites">Favourites</string>
    <string name="fake_coordinates_hint">Latitude, longitude</string>
    <string name="fake_coordinates_invalid">Enter latitude and longitude, for example 52.2297, 21.0122</string>
    <string name="fake_favourites_empty">No saved places yet. Pick a place on the map and save it here.</string>
    <string name="fake_save_place">Save this place</string>
    <string name="fake_place_name">Place name</string>
    <string name="fake_place_delete">Remove %s from favourites?</string>
    <string name="fake_switch_space">Switch space</string>
    <string name="stop_all_spaces">Stop all apps in all spaces</string>
    <string name="all_spaces_stopped">All apps in all spaces stopped</string>
    <string name="user_empty_hint">No apps yet</string>
    <string name="licenses_title">Open source licenses</string>
    <string name="licenses_summary">Libraries used by the app</string>
</resources>