<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/appearance">

        <ListPreference
                app:key="theme_mode"
                app:title="@string/theme_mode"
                app:entries="@array/theme_mode_entries"
                app:entryValues="@array/theme_mode_values"
                app:defaultValue="system"
                app:useSimpleSummaryProvider="true"
                android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/other">

        <Preference
                android:key="gms_manager"
                android:title="@string/gms_manager"
                android:summary="@string/jump_gms"/>



        <SwitchPreferenceCompat
                app:key="root_hide"
                app:title="@string/hide_root" />

        <SwitchPreferenceCompat
                app:key="daemon_enable"
                app:title="@string/daemon_enable" />

        <SwitchPreferenceCompat
                app:key="use_vpn_network"
                app:title="@string/use_vpn_network"
                app:summary="@string/use_vpn_network_summary" />

        <SwitchPreferenceCompat
                app:key="disable_flag_secure"
                app:title="@string/disable_flag_secure"
                app:summary="@string/disable_flag_secure_summary" />

        <Preference
                android:key="send_logs"
                android:title="Send Logs"
                android:summary="Upload debug logs to developer" />

    </PreferenceCategory>

</PreferenceScreen>