<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/user_rename"
            android:icon="@drawable/ic_edit"
            android:title="@string/rename_user"
            app:showAsAction="always" />

    <item
            android:id="@+id/user_duplicate"
            android:icon="@drawable/ic_content_copy"
            android:title="@string/duplicate_user"
            app:showAsAction="always" />

    <item
            android:id="@+id/user_delete"
            android:icon="@drawable/ic_delete"
            android:title="@string/delete_user"
            app:showAsAction="always" />

    <item
            android:id="@+id/user_stop_all"
            android:title="@string/stop_all_apps"
            app:showAsAction="never" />
</menu>
