<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/spacing_large"
            android:paddingTop="@dimen/spacing_small">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:id="@+id/copyDataHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/duplicate_copy_data"
                android:textAppearance="?attr/textAppearanceLabelMedium"
                android:textColor="?attr/colorPrimary" />

        <TextView
                android:id="@+id/copyDataHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/duplicate_copy_data_hint"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?attr/colorOnSurfaceVariant" />

        <LinearLayout
                android:id="@+id/appsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
